# SDL_App

./: CMakeLists.txt  README.md  SDL_app.h
examples/: CMakeLists.txt  SDL_App_Example.c  SDL_app_example.c
include/: SDL_App.h
test/: CMakeLists.txt  SDL_App_Test.c  SDL_app_test.c
